--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
         var renderer = PIXI.autoDetectRenderer(game_width, game_height);
         document.body.appendChild(renderer.view);
 
-        document.write(game_width);
+
 
         var sprite_back = PIXI.Sprite.fromImage("img/background_start@2x.png");
         game_ratio = game_width/375;
-        document.write(game_ratio);
+
         sprite_back.scale.x = sprite_back.scale.y = game_ratio;
         stage.addChild(sprite_back);
-
 
 
         var sprite_title =  PIXI.Sprite.fromImage("img/title@2x.png");
@@ -37,6 +36,23 @@
         sprite_title.position.x = game_width * 0.1187;
         sprite_title.position.y = game_height * 0.1424;
         stage.addChild(sprite_title);
+
+
+        var style = {
+            font : 'bold italic 15px Arial',
+            fill : '#7f7f7f',
+        };
+
+        var sprite_text = new PIXI.Text("进入游戏后,玩家将给定2秒钟时间记忆卡牌,倒计\n时结束后所有卡牌翻回反面.在15s内成对翻开所有\n卡牌即可通关,若在规定时间内未全部成对翻开或\n者翻到炸弹,则游戏失败.", style);
+        sprite_text.scale.x = sprite_text.scale.y = game_ratio;
+        sprite_text.position.x = game_width * 0.091;
+        sprite_text.position.y = game_height * 0.33;
+
+
+        var sprite_help_title = PIXI.Sprite.fromImage("img/title_help@2x.png");
+        sprite_help_title.scale.x = sprite_help_title.scale.y = game_ratio;
+        sprite_help_title.position.x = game_width * 0.331;
+        sprite_help_title.position.y = game_height * 0.165;
 
 
         var sprite_help = PIXI.Sprite.fromImage("img/help_start@2x.png");
@@ -48,8 +64,9 @@
         sprite_help.on('click', click);
 
         function click(eventData) {
-            sprite_help.scale.x += 0.3;
-            sprite_help.scale.y += 0.3;
+            stage.addChild(sprite_back);
+            stage.addChild(sprite_help_title);
+            stage.addChild(sprite_text);
         }
 
         stage.addChild(sprite_help);
@@ -59,7 +76,13 @@
         sprite_start.scale.x = sprite_start.scale.y = game_ratio;
         sprite_start.position.x = game_width * 0.3453;
         sprite_start.position.y = game_height * 0.63;
-        sprite_start.buttonMode = true;
+        sprite_start.interactive = true;
+        sprite_start.on("click", start);
+
+        function start(eventData) {
+            window.location.href="www.baidu.com";
+
+        }
         stage.addChild(sprite_start);
 
 
