封装了random函数，修改了计数刷新小错误。明天可以愉悦的把其他的添上了

--- a/start.html
+++ b/start.html
@@ -74,26 +74,8 @@
         easy_card = new Array();
         easy_card_list = ['1', '2', '3', '4', '1', '2', '3', '4', '0'];
         easy_chosenTiles = new Array();
-        u = new Array();
-        u = [0,0,0,0,0,0,0,0,0];
 
-        for (i=1; i<=3;i++) {
-            easy_chosenTiles[i] = new Array();
-            easy_card[i] = new Array();
-            for (j=1; j<=3;j++) {
-                var candidate=Math.floor(Math.random()*9);
-                while(u[candidate] == 1) {
-                    var candidate = Math.floor(Math.random() * 9);
-                }
-                    easy_chosenTiles[i][j] = candidate;
-                    u[candidate] = 1;
-                document.write(i, "  ", j,"   ", easy_card_list[candidate], '=====');
-                    easy_card[i][j] = new PIXI.Sprite.fromImage("img/1-" + easy_card_list[candidate] + '.png')
-                    easy_card[i][j].position.x = easy_p[i][j][1];
-                    easy_card[i][j].position.y = easy_p[i][j][2];
-                    easy_card[i][j].scale.x = easy_card[i][j].scale.y = game_ratio/2;
-            }
-        }
+        easy_random();
         var texture_easy = PIXI.Texture.fromImage("img/card_back_230@2x.png");
 
         var easy_back = new Array();
@@ -205,6 +187,27 @@
             }
             //animate();
         }
+
+        function easy_random (){
+            u = new Array();
+            u = [0,0,0,0,0,0,0,0,0];
+            for (i=1; i<=3;i++) {
+                easy_chosenTiles[i] = new Array();
+                easy_card[i] = new Array();
+                for (j=1; j<=3;j++) {
+                    var candidate=Math.floor(Math.random()*9);
+                    while(u[candidate] == 1) {
+                        var candidate = Math.floor(Math.random() * 9);
+                    }
+                    easy_chosenTiles[i][j] = candidate;
+                    u[candidate] = 1;
+                    easy_card[i][j] = new PIXI.Sprite.fromImage("img/1-" + easy_card_list[candidate] + '.png')
+                    easy_card[i][j].position.x = easy_p[i][j][1];
+                    easy_card[i][j].position.y = easy_p[i][j][2];
+                    easy_card[i][j].scale.x = easy_card[i][j].scale.y = game_ratio/2;
+                }
+            }
+        }
         animate();
 
 
@@ -215,7 +218,8 @@
                 window.location.href="index.html";
             }
             else if(success){
-                if(rank > 5) {
+                alert(rank);
+                if(rank == 5) {
                     window.location.href = "index.html";
                 }else{
                     success = false;
@@ -226,9 +230,18 @@
                     sprite_rank_easy.text = rank;
                     ready = true;
                     start_num = 15;
+                    easy_random();
                 }
             }
             else if(ready){
+                var h = null;
+                if (start_num >= 10) {
+                    h = "00:" + String(Math.floor(start_num));
+                }
+                else {
+                    h = "00:0" + String(Math.floor(start_num));
+                }
+                sprite_start_num.text = h;
                 if (ready_num == 4) {
                     for(i=1;i<=3;i++) {
                         for(j=1;j<=3;j++){
@@ -272,7 +285,6 @@
                 }
             }
             else if(start){
-                stage.addChild(sprite_start_num);
                 var h = null;
                 if (start_num >= 10) {
                     h = "00:" + String(Math.floor(start_num));
