--- a/start.html
+++ b/start.html
@@ -15,6 +15,7 @@
         var success = false;
         var first = null;
         var next = null;
+        var range = 3;
         var game_width = Math.floor(window_height/1.778);
         if (game_width > window_width) {
             game_width = window_width;
@@ -36,14 +37,16 @@
         var sprite_grey = PIXI.Sprite.fromImage("img/background-拷贝-2@2x.png");
         sprite_grey.scale.x = sprite_grey.scale.y = game_ratio;
 
-//=======================================================================
         var rank = 1;
         var ready = true;
         var ready_num = 4;
         var start = false;
         var start_num = 15;//00:00
         var stop = false;
+
         var ans = 8;
+
+        //==========================easy_card=============================================
 
         easy_p = new Array();
 
@@ -75,7 +78,7 @@
         easy_card_list = ['1', '2', '3', '4', '1', '2', '3', '4', '0'];
         easy_chosenTiles = new Array();
 
-        easy_random();
+        easy_random(1);
         var texture_easy = PIXI.Texture.fromImage("img/card_back_230@2x.png");
 
         var easy_back = new Array();
@@ -93,11 +96,11 @@
                 easy_back[i][j].j = j;
             }
         }
-//---------------------------------------------------
-        var sprite_di =  PIXI.Sprite.fromImage("img/第@2x.png");
-        sprite_di.scale.x = sprite_di.scale.y = game_ratio;
-        sprite_di.position.x = game_width * 0.3693;
-        sprite_di.position.y = game_height * 0.1154;
+
+        var sprite_di_easy =  PIXI.Sprite.fromImage("img/第@2x.png");
+        sprite_di_easy.scale.x = sprite_di_easy.scale.y = game_ratio;
+        sprite_di_easy.position.x = game_width * 0.3693;
+        sprite_di_easy.position.y = game_height * 0.1154;
 
 
         var style = {
@@ -113,10 +116,73 @@
 
 
 
-        var sprite_guan =  PIXI.Sprite.fromImage("img/關@2x.png");
-        sprite_guan.scale.x = sprite_guan.scale.y = game_ratio;
-        sprite_guan.position.x = game_width * 0.5547;
-        sprite_guan.position.y = game_height * 0.1154;
+        var sprite_guan_easy =  PIXI.Sprite.fromImage("img/關@2x.png");
+        sprite_guan_easy.scale.x = sprite_guan_easy.scale.y = game_ratio;
+        sprite_guan_easy.position.x = game_width * 0.5547;
+        sprite_guan_easy.position.y = game_height * 0.1154;
+//=========hard-card=================
+        hard_p = new Array();
+
+
+        for (i=1; i<=4; i++)
+        {
+            hard_p[i] = new Array();
+            for (j=1; j<=4; j++){
+                hard_p[i][j] = new Array();
+                if (j == 1) {
+                    if (i * j == 1) {
+                        hard_p[i][j][1] = game_width * 0.0213;
+                        hard_p[i][j][2] = game_height * 0.2556 ;
+                    }
+                    else {
+                        hard_p[i][j][1] = hard_p[i-1][j][1];
+                        hard_p[i][j][2] = hard_p[i-1][j][2] + game_height * 0.10495;
+                    }
+                }
+                else{
+                    hard_p[i][j][1] = hard_p[i][j-1][1] + game_width * 0.0187;
+                    hard_p[i][j][2] = hard_p[i][j-1][2];
+                }
+            }
+        }
+
+        hard_card_list = new Array();
+        hard_card = new Array();
+        hard_card_list = ['1', '2', '3', '4', '5', '6', '1', '2', '3', '4', '5', '6', '0', '0', '0', '0'];
+        hard_chosenTiles = new Array();
+
+        hard_random(3);
+        var texture_hard = PIXI.Texture.fromImage("img/card_back_170@2x.png");
+
+        var hard_back = new Array();
+        for (i=1; i<=3; i++){
+            hard_back[i] = new Array;
+            for (j=1; j<=3; j++){
+                hard_back[i][j] = new PIXI.Sprite(texture_hard);
+                hard_back[i][j].position.x = hard_p[i][j][1];
+                hard_back[i][j].position.y = hard_p[i][j][2];
+                hard_back[i][j].scale.x = hard_back[i][j].scale.y = game_ratio;
+                hard_back[i][j].buttonMode = true;
+                hard_back[i][j].interactive = true;
+                hard_back[i][j].isSelected = false;
+                hard_back[i][j].i = i;
+                hard_back[i][j].j = j;
+            }
+        }
+
+        var sprite_di_hard =  sprite_di_easy;
+        sprite_di_hard.position.x = game_width * 0.324;
+
+
+        var sprite_rank_hard = sprite_rank_easy;
+        sprite_rank_hard.position.x = game_width * 0.4413;
+
+
+
+        var sprite_guan_hard = sprite_guan_easy;
+        sprite_guan_hard.position.x = game_width * 0.58267;
+//---------------------------------------------------
+
 
 
         var sprite_stop =  PIXI.Sprite.fromImage("img/button_stop@2x.png");
@@ -167,6 +233,9 @@
         chosenTiles = easy_chosenTiles;
         card_list = new Array();
         card_list = easy_card_list;
+        sprite_di = sprite_di_easy;
+        sprite_guan = sprite_guan_easy;
+        sprite_ran = sprite_rank_easy;
         //======================================
 
         function back_click(){
@@ -188,7 +257,7 @@
             //animate();
         }
 
-        function easy_random (){
+        function easy_random (level){
             u = new Array();
             u = [0,0,0,0,0,0,0,0,0];
             for (i=1; i<=3;i++) {
@@ -201,15 +270,35 @@
                     }
                     easy_chosenTiles[i][j] = candidate;
                     u[candidate] = 1;
-                    easy_card[i][j] = new PIXI.Sprite.fromImage("img/1-" + easy_card_list[candidate] + '.png')
+                    easy_card[i][j] = new PIXI.Sprite.fromImage("img/" + level + "-" + easy_card_list[candidate] + '.png')
                     easy_card[i][j].position.x = easy_p[i][j][1];
                     easy_card[i][j].position.y = easy_p[i][j][2];
                     easy_card[i][j].scale.x = easy_card[i][j].scale.y = game_ratio/2;
                 }
             }
         }
-        animate();
 
+        function hard_random (level){
+            u = new Array();
+            u = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0];
+            for (i=1; i<=4;i++) {
+                hard_chosenTiles[i] = new Array();
+                hard_card[i] = new Array();
+                for (j=1; j<=4;j++) {
+                    var candidate=Math.floor(Math.random()*16);
+                    while(u[candidate] == 1) {
+                        var candidate = Math.floor(Math.random() * 16);
+                    }
+                    hard_chosenTiles[i][j] = candidate;
+                    u[candidate] = 1;
+                    hard_card[i][j] = new PIXI.Sprite.fromImage("img/" + level + "-" + hard_card_list[candidate] + '.png')
+                    hard_card[i][j].position.x = hard_p[i][j][1];
+                    hard_card[i][j].position.y = hard_p[i][j][2];
+                    hard_card[i][j].scale.x = hard_card[i][j].scale.y = game_ratio/2;
+                }
+            }
+        }
+        animate();
 
         function animate() {
 
@@ -218,27 +307,41 @@
                 window.location.href="index.html";
             }
             else if(success){
-                if(rank == 1) {
-                    alert(rank);
-                    for(i=1;i<=3;i++){
-                        for (j=1;j<=3;j++){
-                            easy_card[i][j]  = PIXI.Sprite.fromImage("img/2-" + easy_card_list[chosenTiles[i][j]] + ".png");
-                            easy_card[i][j].position.x = easy_p[i][j][1];
-                            easy_card[i][j].position.y = easy_p[i][j][2];
-                            easy_card[i][j].scale.x = easy_card[i][j].scale.y = game_ratio/2;
-                            card[i][j] = easy_card[i][j];
-                        }
+                if (rank ==10){
+                    range = 4;
+                    for (i=1;i<=range;i++){
+                        back[i] = hard_back[i];
+                        card[i] = hard_card[i];
                     }
+                    chosenTiles = hard_chosenTiles;
+                    card_list = hard_card_list;
+                    sprite_di = sprite_di_hard;
+                    sprite_guan = sprite_guan_hard;
+                    sprite_ran = sprite_rank_hard;
                 }
                 success = false;
                 first = null;
                 next = null;
-                ans = 8;
+                if (rank<10){
+                    ans = 8;
+                    easy_random(Math.floor(rank/5 + 1));
+                    for (i=1;i<=range;i++)
+                    {
+                        card[i] = easy_card[i];
+                    }
+                }
+                else {
+                    ans = 12;
+                    hard_random(Math.floor(rank/5 + 1));
+                    for (i=1;i<=range;i++)
+                    {
+                        card[i] = easy_card[i];
+                    }
+                }
                 rank += 1;
                 sprite_rank_easy.text = rank;
                 ready = true;
                 start_num = 15;
-                easy_random();
             }
             else if(ready){
                 var h = null;
@@ -250,29 +353,24 @@
                 }
                 sprite_start_num.text = h;
                 if (ready_num == 4) {
-                    for(i=1;i<=3;i++) {
-                        for(j=1;j<=3;j++){
+                    for(i=1;i<=range;i++) {
+                        for(j=1;j<=range;j++){
                             back[i][j].on('touchstart', back_click);
                             back[i][j].on('mousedown', back_click);
                             back[i][j].isSelected = false;
                             stage.addChild(back[i][j]);
                         }
                     }
-                    if (rank < 10) {
-                        for (i = 1; i <= 3; i++) {
-                            for (j = 1; j <= 3; j++) {
-                                stage.addChild(card[i][j]);
-                            }
+                    for (i = 1; i <= range; i++) {
+                        for (j = 1; j <= range; j++) {
+                            stage.addChild(card[i][j]);
                         }
-                        stage.addChild(sprite_di);
-                        stage.addChild(sprite_rank_easy);
-                        stage.addChild(sprite_guan);
-                        stage.addChild(sprite_grey);
                     }
-                    else {
-
-                    }
-                }
+                    stage.addChild(sprite_di);
+                    stage.addChild(sprite_rank_easy);
+                    stage.addChild(sprite_guan);
+                    stage.addChild(sprite_grey);
+            }
                 sprite_ready_num.text = Math.floor(ready_num);
                 stage.addChild(sprite_ready_num);
                 ready_num -= 0.02;
